[package]
name = "toil_coin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
flexbuffers = "2.0.0"
signature = "2.2.0"
sha2 = "0.10.8"
hkdf = "0.12.4"
rusty-leveldb = "3.0.0"
tokio = "1.36.0"
log = "0.4.20"
flexi_logger = "0.27.4"
profiling = "1.0.14"

[features]
profile-with-puffin = ["profiling/profile-with-puffin"]
